Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-eks-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-eks-app

  template:
    metadata:
      labels:
        app: devops-eks-app

    spec:
      containers:
        - name: devops-eks-app

          image: 099739122394.dkr.ecr.ap-south-1.amazonaws.com/devops-eks-app:v1

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080

            initialDelaySeconds: 10
            periodSeconds: 20
