Kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-eks-service

spec:
  type: ClusterIP

  selector:
    app: devops-eks-app

  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
